// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mentah Screen 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "center",
      }
    }
    testID="myButton"
  >
    <Text
      style={
        Object {
          "backgroundColor": "#333",
          "borderRadius": 50,
          "color": "#fff",
          "padding": 20,
        }
      }
    >
      Press Me
    </Text>
  </View>
</View>
`;

exports[`Testing a component 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#fff",
      "color": "#333",
      "flex": 1,
    }
  }
>
  <Text
    style={
      Object {
        "color": "#333",
        "fontSize": 24,
        "fontWeight": "bold",
        "marginVertical": 12,
        "textAlign": "center",
      }
    }
  >
    My Todo List
  </Text>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      getItem={[Function]}
      getItemCount={[Function]}
      keyExtractor={[Function]}
      onContentSizeChange={[Function]}
      onLayout={[Function]}
      onMomentumScrollBegin={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      removeClippedSubviews={false}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      viewabilityConfigCallbackPairs={Array []}
    >
      <View />
    </RCTScrollView>
  </View>
  <View
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <TextInput
      onChangeText={[Function]}
      placeholder="Start Todo List Here"
      placeholderTextColor="#fff"
      style={
        Object {
          "backgroundColor": "#333",
          "borderRadius": 40,
          "color": "#fff",
          "fontSize": 16,
          "marginHorizontal": 12,
          "marginVertical": 10,
          "padding": 17,
          "paddingHorizontal": 25,
          "width": "90%",
        }
      }
      value=""
    />
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="myButton"
    >
      <Text
        style={
          Object {
            "alignSelf": "flex-end",
            "backgroundColor": "#333",
            "borderRadius": 50,
            "color": "#fff",
            "fontSize": 35,
            "marginVertical": 10,
            "padding": 15,
            "textAlign": "center",
            "width": 70,
          }
        }
        testID="myText"
      >
        +
      </Text>
    </View>
  </View>
</View>
`;
